cmake_minimum_required(VERSION 3.0.0)
project (hw1 VERSION 0.1.0 LANGUAGES C CXX)
set(MTM_FLAGS_DEBUG "-std=c++11 --pedantic-errors -Wall -Werror")
set(MTM_FLAGS_RELEASE "${MTM_FLAG_DEBUG} -DNDEBUG")
set(CMAKE_C_FLAGS ${MTM_FLAGS_DEBUG})
add_executable(my_executable Employee.h Company.h DS.cpp library1.cpp List.h Avltree.h main.cpp SalaryKey.h)